@@ -2,15 +2,16 @@ package com.playground.application.task.query;
 
 import com.playground.presentation.controller.deadline.response.FetchTaskResponseDeadlineField;
 import com.playground.presentation.controller.task.response.FetchTaskResponse;
-import java.util.List;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 
 @Component
 public final class FetchTaskResponseConverter {
   public FetchTaskResponse convertFetchTaskResponse(
       final List<FindTaskByProjectIdAndTaskIdDto> findTaskByProjectIdAndTaskIdDtos) {
     final FindTaskByProjectIdAndTaskIdDto findTaskByProjectIdAndTaskIdDto =
-        findTaskByProjectIdAndTaskIdDtos.get(0);
+        findTaskByProjectIdAndTaskIdDtos.getFirst();
     final String taskName = findTaskByProjectIdAndTaskIdDto.getTaskName();
     final String status = findTaskByProjectIdAndTaskIdDto.getStatus();
     final String[] assignedAccountIds =
